--- a/tugas-01-5025231033/tugas-01.html
+++ b/tugas-01-5025231033/tugas-01.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-<title>Tugas 1 Grafkom - Raditya Yusuf dan Rahman Azkarafi</title>
+<title>Raditya Yusuf (5025231033) dan Rahman Azkarafi (502523104)</title>
 <style>
     body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -271,7 +271,7 @@
 </head>
 
 <body>
-    <h1>Tugas 1 Grafkom - Raditya Yusuf dan Rahman Azkarafi</h1>
+    <h1>Raditya Yusuf (5025231033) dan Rahman Azkarafi (5025231044)</h1>
     
     <!-- Container untuk foto objek asli -->
     <div class="photo-container">
